<resources>
    <string name="app_name" translatable="false">WirelessADB</string>
    <string name="default_deviceName" translatable="false">rpuxa_pc</string>
    <string name="connect_btn_text">connect</string>
    <string name="device_icon_description">DEVICE ICON</string>
    <string name="searching_devices">Searching devices</string>
    <string name="devices_not_found">Devices not found</string>
    <string name="search_disabled">Search disabled</string>
    <string name="disconnect_btn_text">Disconnect</string>
    <string name="automatically_connect_text">Connect automatically</string>
    <string name="green_dot_descriptor">connected</string>
    <string name="language_menu_item">Language</string>
    <string name="rename_menu_item">Rename this device</string>
    <string name="device_rename">Device rename</string>
    <string name="cancel_dialog_btn">Cancel</string>
    <string name="rename_dialog_btn">Rename</string>
    <string name="error_dialog_title">Error on connecting</string>
    <string name="error_img_description">error</string>
    <string name="error_code">Error code: </string>
    <string name="search_btn">Search</string>
    <string name="def_code" translatable="false">11111</string>
    <string name="default_error_msg">An error occurred during the connection. Click \"Search\" to finding a solution on the Internet.</string>
    <string name="known_error_msg">An error occurred during the connection. Connect this device via USB and press \"Fix\" to clear it and prevent it from happening again.</string>
    <string name="usb_error_msg">Please connect this device to USB and press \"Fix\" again.</string>
    <string name="fix_btn">Fix</string>
    <string name="language_dialog_title">Pick a language</string>
    <string name="not_enabled_wifi">Wi-fi is not enabled</string>
    <string name="menu_check_box">Auto start search</string>
</resources>
