<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/error_img_description"
            android:paddingEnd="@dimen/default_padding"
            android:paddingStart="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:src="@drawable/warning" />

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_warning"
            android:text="@string/error_code"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/error_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/error_text_view"
            android:layout_toEndOf="@id/error_text_view"
            android:text="@string/def_code"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_toEndOf="@id/img_warning"
            android:gravity="center_vertical"
            android:text="@string/error_dialog_title"
            android:textColor="@color/primary_text_dark"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="@dimen/default_padding"
        android:text="@string/default_error_msg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_dialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_dialog_btn"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/do_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_btn"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>