<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/listItem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/device_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:src="@drawable/pc"
        android:contentDescription="@string/device_icon_description" />

    <TextView
        android:id="@+id/device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/device_icon"
        android:layout_toStartOf="@id/connect_btn"
        android:layout_marginEnd="16dp"
        android:layout_centerVertical="true"
        android:text="@string/default_deviceName"
        android:textColor="@color/primary_text_dark"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/connect_btn"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:text="@string/connect_btn_text"
        android:textAllCaps="false"
        android:background="#FFF"/>

</RelativeLayout>