<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/device_rename"
        android:textColor="@color/primary_text_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:inputType="textAutoComplete"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin">

        <Button
            android:id="@+id/cancel_dialog_btn"
            style="@style/DialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_dialog_btn"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/rename_dialog_btn"
            style="@style/DialogButton.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rename_dialog_btn"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>